@@ -433,6 +433,9 @@ Release 2.7.1 - 2015-07-06
 
   BUG FIXES
 
+    HADOOP-12017. Hadoop archives command should use configurable replication
+    factor when closing (Bibin A Chundatt via vinayakumarb)
+
     HADOOP-11868. Invalid user logins trigger large backtraces in server log
     (Chang Li via jlowe)
 
